gen/GAXTParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GAXTParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Fmt_variable=1, Fmt_space=2, Fmt_tab=3, Fmt_new_line=4, Fmt_finish=5, 
		AMPERSAND=6, FINISH=7, SPACE=8, VARIABLE=9, CONSTANT=10, DIGIT=11, TOKEN=12, 
		ADD=13, SUB=14, MULT=15, DIV=16, CAT=17, NOR=18, LESS=19, EQUAL=20, GREATER=21, 
		PRINT_INT=22, PRINT_CHAR=23, ASSIGN=24, REVERSE=25, SHAVE=26, CLEAR=27, 
		IF=28, THEN=29, ELSE=30, BREAK=31, CONTINUE=32, READ=33, WRITE=34, CALL=35, 
		REPEAT=36, UNTIL=37, STRING_EDGE=38, FORMAT=39, SAVE=40, LOAD=41, SWITCH=42, 
		PROGRAM_END=43, COMMENT=44;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_string = 2, RULE_expr_in_string = 3, 
		RULE_string_char = 4, RULE_formatter = 5, RULE_fmt_expr = 6, RULE_flow = 7, 
		RULE_full_branch = 8, RULE_short_branch = 9, RULE_service = 10, RULE_direct_stack_op = 11, 
		RULE_print = 12, RULE_stack_op = 13, RULE_stack_logical = 14, RULE_stack_math = 15, 
		RULE_stack_push = 16, RULE_loop = 17, RULE_macro = 18, RULE_store_macro = 19, 
		RULE_call_macro = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "string", "expr_in_string", "string_char", "formatter", 
			"fmt_expr", "flow", "full_branch", "short_branch", "service", "direct_stack_op", 
			"print", "stack_op", "stack_logical", "stack_math", "stack_push", "loop", 
			"macro", "store_macro", "call_macro"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'&'", "'!'", null, null, null, null, 
			null, "'+'", "'-'", "'*'", "'/'", "'_'", "'`'", "'<'", "'='", "'>'", 
			"'?'", "'$'", "':'", "';'", "'~'", "'%'", "'{'", "'|'", "'}'", "'\\'", 
			"'^'", "'('", "')'", "'@'", "'['", "']'", "'\"'", "'''", "'.'", "','", 
			"'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Fmt_variable", "Fmt_space", "Fmt_tab", "Fmt_new_line", "Fmt_finish", 
			"AMPERSAND", "FINISH", "SPACE", "VARIABLE", "CONSTANT", "DIGIT", "TOKEN", 
			"ADD", "SUB", "MULT", "DIV", "CAT", "NOR", "LESS", "EQUAL", "GREATER", 
			"PRINT_INT", "PRINT_CHAR", "ASSIGN", "REVERSE", "SHAVE", "CLEAR", "IF", 
			"THEN", "ELSE", "BREAK", "CONTINUE", "READ", "WRITE", "CALL", "REPEAT", 
			"UNTIL", "STRING_EDGE", "FORMAT", "SAVE", "LOAD", "SWITCH", "PROGRAM_END", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GAXTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode FINISH() { return getToken(GAXTParser.FINISH, 0); }
		public TerminalNode EOF() { return getToken(GAXTParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4791572889088L) != 0) {
				{
				{
				setState(42);
				expression();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(FINISH);
			setState(49);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public Store_macroContext store_macro() {
			return getRuleContext(Store_macroContext.class,0);
		}
		public Stack_pushContext stack_push() {
			return getRuleContext(Stack_pushContext.class,0);
		}
		public Stack_opContext stack_op() {
			return getRuleContext(Stack_opContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Direct_stack_opContext direct_stack_op() {
			return getRuleContext(Direct_stack_opContext.class,0);
		}
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public Call_macroContext call_macro() {
			return getRuleContext(Call_macroContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GAXTParser.TOKEN, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REPEAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				loop();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				store_macro();
				}
				break;
			case VARIABLE:
			case CONSTANT:
			case DIGIT:
			case STRING_EDGE:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				stack_push();
				}
				break;
			case ADD:
			case SUB:
			case MULT:
			case DIV:
			case CAT:
			case NOR:
			case LESS:
			case EQUAL:
			case GREATER:
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				stack_op();
				}
				break;
			case PRINT_INT:
			case PRINT_CHAR:
				enterOuterAlt(_localctx, 5);
				{
				setState(55);
				print();
				}
				break;
			case ASSIGN:
			case REVERSE:
			case SHAVE:
			case CLEAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(56);
				direct_stack_op();
				}
				break;
			case SWITCH:
				enterOuterAlt(_localctx, 7);
				{
				setState(57);
				service();
				}
				break;
			case IF:
			case BREAK:
			case CONTINUE:
				enterOuterAlt(_localctx, 8);
				{
				setState(58);
				flow();
				}
				break;
			case CALL:
				enterOuterAlt(_localctx, 9);
				{
				setState(59);
				call_macro();
				}
				break;
			case TOKEN:
				enterOuterAlt(_localctx, 10);
				{
				setState(60);
				match(TOKEN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StringContext extends ParserRuleContext {
		public String_charContext string_chars;
		public List<TerminalNode> STRING_EDGE() { return getTokens(GAXTParser.STRING_EDGE); }
		public TerminalNode STRING_EDGE(int i) {
			return getToken(GAXTParser.STRING_EDGE, i);
		}
		public List<String_charContext> string_char() {
			return getRuleContexts(String_charContext.class);
		}
		public String_charContext string_char(int i) {
			return getRuleContext(String_charContext.class,i);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(STRING_EDGE);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4516694982270L) != 0) {
				{
				{
				setState(64);
				((StringContext)_localctx).string_chars = string_char();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			match(STRING_EDGE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_in_stringContext extends ParserRuleContext {
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public Store_macroContext store_macro() {
			return getRuleContext(Store_macroContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(GAXTParser.VARIABLE, 0); }
		public TerminalNode CONSTANT() { return getToken(GAXTParser.CONSTANT, 0); }
		public TerminalNode DIGIT() { return getToken(GAXTParser.DIGIT, 0); }
		public Stack_opContext stack_op() {
			return getRuleContext(Stack_opContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Direct_stack_opContext direct_stack_op() {
			return getRuleContext(Direct_stack_opContext.class,0);
		}
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public Call_macroContext call_macro() {
			return getRuleContext(Call_macroContext.class,0);
		}
		public TerminalNode TOKEN() { return getToken(GAXTParser.TOKEN, 0); }
		public Expr_in_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_in_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterExpr_in_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitExpr_in_string(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitExpr_in_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expr_in_stringContext expr_in_string() throws RecognitionException {
		Expr_in_stringContext _localctx = new Expr_in_stringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr_in_string);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REPEAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				loop();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				store_macro();
				}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				match(VARIABLE);
				}
				break;
			case CONSTANT:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				match(CONSTANT);
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				match(DIGIT);
				}
				break;
			case ADD:
			case SUB:
			case MULT:
			case DIV:
			case CAT:
			case NOR:
			case LESS:
			case EQUAL:
			case GREATER:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				stack_op();
				}
				break;
			case PRINT_INT:
			case PRINT_CHAR:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				print();
				}
				break;
			case ASSIGN:
			case REVERSE:
			case SHAVE:
			case CLEAR:
				enterOuterAlt(_localctx, 8);
				{
				setState(79);
				direct_stack_op();
				}
				break;
			case SWITCH:
				enterOuterAlt(_localctx, 9);
				{
				setState(80);
				service();
				}
				break;
			case IF:
			case BREAK:
			case CONTINUE:
				enterOuterAlt(_localctx, 10);
				{
				setState(81);
				flow();
				}
				break;
			case CALL:
				enterOuterAlt(_localctx, 11);
				{
				setState(82);
				call_macro();
				}
				break;
			case TOKEN:
				enterOuterAlt(_localctx, 12);
				{
				setState(83);
				match(TOKEN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class String_charContext extends ParserRuleContext {
		public Expr_in_stringContext expr_in_string() {
			return getRuleContext(Expr_in_stringContext.class,0);
		}
		public FormatterContext formatter() {
			return getRuleContext(FormatterContext.class,0);
		}
		public String_charContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_char; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterString_char(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitString_char(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitString_char(this);
			else return visitor.visitChildren(this);
		}
	}

	public final String_charContext string_char() throws RecognitionException {
		String_charContext _localctx = new String_charContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_char);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
			case CONSTANT:
			case DIGIT:
			case TOKEN:
			case ADD:
			case SUB:
			case MULT:
			case DIV:
			case CAT:
			case NOR:
			case LESS:
			case EQUAL:
			case GREATER:
			case PRINT_INT:
			case PRINT_CHAR:
			case ASSIGN:
			case REVERSE:
			case SHAVE:
			case CLEAR:
			case IF:
			case BREAK:
			case CONTINUE:
			case READ:
			case CALL:
			case REPEAT:
			case SWITCH:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				expr_in_string();
				}
				break;
			case Fmt_variable:
			case Fmt_space:
			case Fmt_tab:
			case Fmt_new_line:
			case Fmt_finish:
			case AMPERSAND:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				formatter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FormatterContext extends ParserRuleContext {
		public TerminalNode Fmt_variable() { return getToken(GAXTParser.Fmt_variable, 0); }
		public TerminalNode Fmt_space() { return getToken(GAXTParser.Fmt_space, 0); }
		public TerminalNode Fmt_tab() { return getToken(GAXTParser.Fmt_tab, 0); }
		public TerminalNode Fmt_new_line() { return getToken(GAXTParser.Fmt_new_line, 0); }
		public TerminalNode Fmt_finish() { return getToken(GAXTParser.Fmt_finish, 0); }
		public Fmt_exprContext fmt_expr() {
			return getRuleContext(Fmt_exprContext.class,0);
		}
		public FormatterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formatter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterFormatter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitFormatter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitFormatter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormatterContext formatter() throws RecognitionException {
		FormatterContext _localctx = new FormatterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formatter);
		try {
			setState(96);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Fmt_variable:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				match(Fmt_variable);
				}
				break;
			case Fmt_space:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(Fmt_space);
				}
				break;
			case Fmt_tab:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				match(Fmt_tab);
				}
				break;
			case Fmt_new_line:
				enterOuterAlt(_localctx, 4);
				{
				setState(93);
				match(Fmt_new_line);
				}
				break;
			case Fmt_finish:
				enterOuterAlt(_localctx, 5);
				{
				setState(94);
				match(Fmt_finish);
				}
				break;
			case AMPERSAND:
				enterOuterAlt(_localctx, 6);
				{
				setState(95);
				fmt_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fmt_exprContext extends ParserRuleContext {
		public List<TerminalNode> AMPERSAND() { return getTokens(GAXTParser.AMPERSAND); }
		public TerminalNode AMPERSAND(int i) {
			return getToken(GAXTParser.AMPERSAND, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Fmt_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fmt_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterFmt_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitFmt_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitFmt_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fmt_exprContext fmt_expr() throws RecognitionException {
		Fmt_exprContext _localctx = new Fmt_exprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fmt_expr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(AMPERSAND);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4791572889088L) != 0) {
				{
				{
				setState(99);
				expression();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(AMPERSAND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FlowContext extends ParserRuleContext {
		public Full_branchContext full_branch() {
			return getRuleContext(Full_branchContext.class,0);
		}
		public Short_branchContext short_branch() {
			return getRuleContext(Short_branchContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(GAXTParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(GAXTParser.CONTINUE, 0); }
		public FlowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitFlow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitFlow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FlowContext flow() throws RecognitionException {
		FlowContext _localctx = new FlowContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_flow);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				full_branch();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				short_branch();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				match(BREAK);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				match(CONTINUE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Full_branchContext extends ParserRuleContext {
		public ExpressionContext true_branch;
		public ExpressionContext false_branch;
		public TerminalNode IF() { return getToken(GAXTParser.IF, 0); }
		public TerminalNode THEN() { return getToken(GAXTParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(GAXTParser.ELSE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Full_branchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_full_branch; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).enterFull_branch(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GAXTListener ) ((GAXTListener)listener).exitFull_branch(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GAXTVisitor ) return ((GAXTVisitor<? extends T>)visitor).visitFull_branch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Full_branchContext full_branch() throws RecognitionException {
		Full_branchContext _localctx = new Full_branchContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_full_branch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(IF);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4791572889088L) != 0) {
				{
				{
				setState(114);
				((Full_branchContext)_localctx).true_branch = expression();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(THEN);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 4791572889088L) != 0) {
				{
				{
				setState(121);
				((Full_branchContext)_localctx).false_branch = expression();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(ELSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
